# peteksuite

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.agents/skills/add-todo/: SKILL.md
.agents/skills/add-todo/agents/: openai.yaml
.agents/skills/coordinate/: SKILL.md
.agents/skills/coordinate/agents/: openai.yaml
.agents/skills/dev-docs-cleanup/: SKILL.md
.agents/skills/dev-docs-cleanup/agents/: openai.yaml
.agents/skills/manage-actions/: SKILL.md
.agents/skills/manage-actions/agents/: openai.yaml
.agents/skills/manage-actions/references/: workflows.md
.agents/skills/notify/: SKILL.md
.agents/skills/notify/agents/: openai.yaml
.agents/skills/read-inbox/: SKILL.md
.agents/skills/read-inbox/agents/: openai.yaml
.agents/skills/release/: SKILL.md
.agents/skills/release/agents/: openai.yaml
.agents/skills/run-library-task/: SKILL.md
.agents/skills/run-library-task/agents/: openai.yaml
.agents/skills/run-library-task/references/: libraries.md
.agents/skills/suite-status/: SKILL.md
.agents/skills/suite-status/agents/: openai.yaml
.github/workflows/: docs.yml  release.yml
docs/: index.md
docs/_snippets/: model_build_v2.py
docs/explanation/: engine-architecture.md  index.md  spec-pattern.md
docs/gallery/: index.md
docs/getting-started/: architecture.md  install.md  licensing.md
docs/how-to/: index.md
docs/libraries/: petekio.md  peteksim.md  petekstatic.md  petektools.md
docs/notebooks/: index.md
docs/notebooks/petekio/: 01_ingest_tour.ipynb  02_well_analysis.ipynb
docs/notebooks/peteksim/: 01_full_workflow.ipynb  02_scenarios_uncertainty.ipynb
docs/notebooks/petekstatic/: 01_stack_model_from_scatter.ipynb  02_volumes_and_bundles.ipynb
docs/notebooks/petektools/: 01_geostat_tour.ipynb  02_synthetic_data_tour.ipynb
docs/reference/: index.md  petekio.md  peteksim.md  petekstatic.md  petektools.md  rust.md
docs/tutorials/: data-ingest.md  index.md  simulation-uncertainty.md  static-model-build.md  synthetic-testing.md  visualization.md  well-analysis.md
scripts/: scrub_docs.sh  sync_library_docs.sh
src/peteksuite/: __init__.py
tests/: test_peteksuite_aliases.py
