[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peteksuite"
version = "0.1.4"
description = "The petek subsurface-modelling suite — installs the whole family (petektools, petekio, petekstatic, peteksim)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com" }]
keywords = ["reservoir", "geomodel", "volumetrics", "subsurface", "petrophysics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "petektools>=0.2.4",
    "petekio>=0.3.4",
    "petekstatic>=0.1.7",
    "peteksim>=0.1.5",
]

[project.urls]
Documentation = "https://peteksuite.readthedocs.io/"
Repository = "https://github.com/kkollsga/peteksuite"

[tool.hatch.build.targets.wheel]
packages = ["src/peteksuite"]

[tool.hatch.build.targets.sdist]
include = ["src/peteksuite", "README.md", "LICENSE", "NOTICE"]
