[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peteksuite"
version = "0.1.13"
description = "The petek subsurface-modelling suite — installs the whole family (petektools, petekio, petekstatic, peteksim)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com" }]
keywords = ["reservoir", "geomodel", "volumetrics", "subsurface", "petrophysics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "petektools>=0.2.13",
    "petekio>=0.3.13",
    "petekstatic>=0.1.12",
    "peteksim>=0.1.11",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.6.1",
    "kglite-cli>=0.12.10",
    "maturin>=1.14.1",
    "pytest>=9.1.1",
]

[project.urls]
Documentation = "https://peteksuite.readthedocs.io/"
Repository = "https://github.com/kkollsga/peteksuite"

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
petektools = { path = "petekTools", editable = true }
petekio = { path = "petekIO", editable = true }
petekstatic = { path = "petekStatic", editable = true }
peteksim = { path = "petekSim/crates/srs-py", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/peteksuite"]

[tool.hatch.build.targets.sdist]
include = ["src/peteksuite", "README.md", "LICENSE", "NOTICE"]
